--- a/lib/src/dashboard_component/create_post_component/create_post_component.html
+++ b/lib/src/dashboard_component/create_post_component/create_post_component.html
@@ -168,212 +168,7 @@
                                 <!-- Panel 2 -->
                                 <div class="tab-pane fade position-relative" id="panel2" role="tabpanel">
                                     <div class="container p-2">
-                                        <ul class="nav card-body c-bordered sticky-top py-2 br-20"
-                                            style="overflow: hidden !important; height: 50px !important; width: 100% !important; background: rgba(251,250,250,0.97) !important; border: 0; box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08) !important;">
-
-                                            <div id="emoji_carousel" class="carousel slide w-100" data-ride="carousel">
-<!--                                                <ol class="carousel-indicators">-->
-<!--                                                    <li data-target="#emoji_carousel" data-slide-to="0" class="active"></li>-->
-<!--                                                    <li data-target="#emoji_carousel" data-slide-to="1"></li>-->
-<!--                                                    <li data-target="#emoji_carousel" data-slide-to="2"></li>-->
-<!--                                                    <li data-target="#emoji_carousel" data-slide-to="3"></li>-->
-<!--                                                    <li data-target="#emoji_carousel" data-slide-to="4"></li>-->
-<!--                                                </ol>-->
-                                                <div class="carousel-inner" role="listbox">
-                                                    <div class="carousel-item active mx-auto">
-                                                        <div class="row mx-2">
-                                                            <div class="mx-auto">
-                                                                <li class="mx-auto text-center mt-1">
-                                                                    <a class="text-warning px-4" data-toggle="tab" href="#emo1" role="tab">
-                                                                        <span class="fa fa-smile-o"></span>
-                                                                    </a>
-                                                                </li>
-                                                            </div>
-                                                            <div class="mx-auto">
-                                                                <li class="mx-auto text-center mt-1">
-                                                                    <a class="text-info px-4" data-toggle="tab" href="#emo2" role="tab">
-                                                                        <span class="fa fa-bug"></span>
-                                                                    </a>
-                                                                </li>
-                                                            </div>
-                                                            <div class="mx-auto">
-                                                                <li class="mx-auto text-center mt-1">
-                                                                    <a class="text-success px-4" data-toggle="tab" href="#emo3" role="tab">
-                                                                        <span class="fa fa-book"></span>
-                                                                    </a>
-                                                                </li>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="carousel-item">
-                                                        <div class="row mx-2">
-                                                            <div class="mx-auto">
-                                                                <li class="mx-auto text-center mt-1">
-                                                                    <a class="text-danger px-4" data-toggle="tab" href="#emo4" role="tab">
-                                                                        <span class="fa fa-plane"></span>
-                                                                    </a>
-                                                                </li>
-                                                            </div>
-                                                            <div class="mx-auto">
-                                                                <li class="mx-auto text-center mt-1">
-                                                                    <a class="text-danger px-4" data-toggle="tab" href="#emo5" role="tab">
-                                                                        <span class="fa fa-flag"></span>
-                                                                    </a>
-                                                                </li>
-                                                            </div>
-                                                            <div class="mx-auto">
-                                                                <li class="mx-auto text-center mt-1">
-                                                                    <a class="{{appTheme['text-colour']}} px-4" data-toggle="tab" href="#emo6" role="tab">
-                                                                        <span class="fa fa-object-group"></span>
-                                                                    </a>
-                                                                </li>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="carousel-item">
-                                                        <div class="row mx-2">
-                                                            <div class="mx-auto">
-                                                                <li class="mx-auto text-center mt-1">
-                                                                    <a class="text-danger px-4" data-toggle="tab" href="#emo7" role="tab">
-                                                                        <span class="fa fa-wine-bottle"></span>
-                                                                    </a>
-                                                                </li>
-                                                            </div>
-                                                            <div class="mx-auto">
-                                                                <li class="mx-auto text-center mt-1">
-                                                                    <a class="text-primary px-4" data-toggle="tab" href="#emo8" role="tab">
-                                                                        <span class="fa fa-car"></span>
-                                                                    </a>
-                                                                </li>
-                                                            </div>
-                                                            <div class="mx-auto">
-                                                                <li class="mx-auto text-center mt-1">
-                                                                    <a class="text-info px-4" data-toggle="tab" href="#emo9" role="tab">
-                                                                        <span class="fa fa-people-carry"></span>
-                                                                    </a>
-                                                                </li>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <!--<div class="carousel-item">
-                                                        <div class="row">
-
-                                                        </div>
-                                                    </div>-->
-                                                    <div class="carousel-item">
-                                                        <div class="row">
-                                                            <div class="mx-auto">
-                                                                <li class="mx-auto text-center mt-1">
-                                                                    <a class="{{appTheme['text-colour']}} px-4" data-toggle="tab" href="#emo10" role="tab">
-                                                                        <span class="fa fa-toolbox"></span>
-                                                                    </a>
-                                                                </li>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <a class="carousel-control-prev" href="#emoji_carousel" role="button" data-slide="prev">
-                                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                                </a>
-                                                <a class="carousel-control-next" href="#emoji_carousel" role="button" data-slide="next">
-                                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                                </a>
-                                            </div>
-                                        </ul>
-                                        <div class="tab-content">
-                                            <div class="tab-pane fade show active position-relative" id="emo1"
-                                                 role="tabpanel">
-                                                <div class="row mt-2 w-100 mr-auto ml-auto">
-                                                    <div (click)="getEmotionValue($i)"
-                                                         *ngFor="let smileyEmotion of smileyEmotions; let $i=index"
-                                                         class="col-2 emoji p-1 mx-auto cursor-pointer">
-                                                        {{smileyEmotion}}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="tab-pane fade position-relative" id="emo2" role="tabpanel">
-                                                <div class="row mt-2 w-100 mr-auto ml-auto">
-                                                    <div (click)="getAnimalsValue($i)"
-                                                         *ngFor="let animalNature of animalNatures; let $i=index"
-                                                         class="col-2 emoji p-1 mx-auto cursor-pointer">
-                                                        {{animalNature}}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="tab-pane fade position-relative" id="emo3" role="tabpanel">
-                                                <div class="row mt-2 w-100 mr-auto ml-auto">
-                                                    <div (click)="getActivitiesValue($i)"
-                                                         *ngFor="let activity of activities; let $i=index"
-                                                         class="col-2 emoji p-1 mx-auto cursor-pointer">
-                                                        {{activity}}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="tab-pane fade position-relative" id="emo4" role="tabpanel">
-                                                <div class="row mt-2 w-100 mr-auto ml-auto">
-                                                    <div (click)="getTravelPlacesValue($i)"
-                                                         *ngFor="let travelPlace of travelPlaces; let $i=index"
-                                                         class="col-2 emoji p-1 mx-auto cursor-pointer">
-                                                        {{travelPlace}}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="tab-pane fade position-relative" id="emo5" role="tabpanel">
-                                                <div class="row mt-2 w-100 mr-auto ml-auto">
-                                                    <div (click)="getFlagValue($i)"
-                                                         *ngFor="let flag of flags; let $i=index"
-                                                         class="col-2 emoji p-1 mx-auto cursor-pointer">
-                                                        {{flag}}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="tab-pane fade show active position-relative" id="emo6"
-                                                 role="tabpanel">
-                                                <div class="row mt-2 w-100 mr-auto ml-auto">
-                                                    <div (click)="getObjectsValue($i)"
-                                                         *ngFor="let object of objects; let $i=index"
-                                                         class="col-2 emoji p-1 mx-auto cursor-pointer">
-                                                        {{object}}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="tab-pane fade position-relative" id="emo7" role="tabpanel">
-                                                <div class="row mt-2 w-100 mr-auto ml-auto">
-                                                    <div (click)="getFoodDrinksValue($i)"
-                                                         *ngFor="let foodDrink of foodDrinks; let $i=index"
-                                                         class="col-2 emoji p-1 mx-auto cursor-pointer">
-                                                        {{foodDrink}}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="tab-pane fade position-relative" id="emo8" role="tabpanel">
-                                                <div class="row mt-2 w-100 mr-auto ml-auto">
-                                                    <div (click)="getComponentValue($i)"
-                                                         *ngFor="let component of components; let $i=index"
-                                                         class="col-2 emoji p-1 mx-auto cursor-pointer">
-                                                        {{component}}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="tab-pane fade position-relative" id="emo9" role="tabpanel">
-                                                <div class="row mt-2 w-100 mr-auto ml-auto">
-                                                    <div (click)="getPeopleBodyValue($i)"
-                                                         *ngFor="let peopleBody of peopleBodys; let $i=index"
-                                                         class="col-2 emoji p-1 mx-auto cursor-pointer">
-                                                        {{peopleBody}}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="tab-pane fade position-relative" id="emo10" role="tabpanel">
-                                                <div class="row mt-2 w-100 mr-auto ml-auto">
-                                                    <div (click)="getSymbolsValue($i)"
-                                                         *ngFor="let symbol of symbols; let $i=index"
-                                                         class="col-2 emoji p-1 mx-auto cursor-pointer">
-                                                        {{symbol}}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <emoji-app (myClick)="setData($event)"></emoji-app>
                                     </div>
                                 </div>
                                 <!-- Panel 2 -->
