--- a/lib/src/dashboard_component/dashboard_component.html
+++ b/lib/src/dashboard_component/dashboard_component.html
@@ -332,8 +332,8 @@
 
     <material-content>
         <!--    Material navbar-->
-        <header class="material-header header-custom" style="z-index: 1030 !important;">
-            <div class="material-header-row {{appTheme['box']}} {{appTheme['text-colour']}}">
+        <header class="material-header header-custom {{appTheme['box']}} {{appTheme['text-colour']}} shadow" style="z-index: 1030 !important;">
+            <div class="material-header-row">
                 <!-- This button will toggle (open/close) the drawer -->
                 <material-button icon
                                  class="material-drawer-button" (trigger)="drawer.toggle()">
