--- a/lib/src/dashboard_component/setting_component/user_account_component/user_account_component.html
+++ b/lib/src/dashboard_component/setting_component/user_account_component/user_account_component.html
@@ -1,4 +1,4 @@
-<div class="w-100 p-0 m-0">
+<!--<div class="w-100 p-0 m-0">
     <div class="row m-0 mt-3">
         <div class="col-sm-12 col-md-6 mb-3">
             <div class="card shadow-c border-0 bg-transparent box-one br-20 mb-3">
@@ -130,6 +130,118 @@
                         <div class="form-group mb-0"><button class="btn btn-primary btn-sm px-3 br-20" type="submit">Save&nbsp;Settings</button></div>
                     </form>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>-->
+<div class="w-100 p-0 m-0">
+    <div class="m-0 m-md-5 p-2 p-md-5 box-one br-20 user-section shadow">
+        <div class="row w-100 mx-0 mb-5 p-0">
+            <div class="col-12">
+                <h6 class="font-weight-bold mb-5">
+                    <span class="fa fa-user-o text-primary pr-2"></span>
+                    User Profile
+                </h6>
+            </div>
+            <div class="col-12">
+                <form>
+                    <div class="form-row">
+                        <div class="col">
+                            <div class="form-group"><label for="username" class="text-muted"><strong>Username</strong></label>
+                                <input class="nt-form-control br-20 " type="text" placeholder="user.name" name="username" id="username">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group"><label for="email" class="text-muted"><strong>Email Address</strong></label>
+                                <input class="nt-form-control br-20 " type="email" placeholder="user@example.com" name="email" id="email">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col">
+                            <div class="form-group"><label for="first_name" class="text-muted"><strong>First Name</strong></label>
+                                <input class="nt-form-control br-20 " type="text" placeholder="Nathaniel" name="first_name" id="first_name">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group"><label for="last_name" class="text-muted"><strong>Last Name</strong></label>
+                                <input class="nt-form-control br-20 " type="text" placeholder="Rice" name="last_name" id="last_name">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group mb-0 float-right mt-2"><button class="btn btn-primary btn-sm px-3 br-20" type="submit">Save Settings</button></div>
+                </form>
+            </div>
+        </div>
+        <div class="row w-100 mx-0 mb-5 p-0">
+            <div class="col-12">
+                <h6 class="font-weight-bold mb-5">
+                    <span class="fa fa-sign-in text-danger pr-2"></span>
+                    Login Settings
+                </h6>
+            </div>
+            <div class="col-12">
+                <form>
+                    <div class="form-row">
+                        <div class="form-group"><label for="username-disabled" class="text-muted"><strong>Username</strong></label>
+                            <input class="nt-form-control br-20" type="text" placeholder="Username" name="username" id="username-disabled" disabled>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col">
+                            <div class="form-group"><label for="old-password" class="text-muted"><strong>Old Password</strong></label>
+                                <input class="nt-form-control br-20 " type="text" placeholder="Old password" name="old password" id="old-password">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group"><label for="new-password" class="text-muted"><strong>New Password</strong></label>
+                                <input class="nt-form-control br-20 " type="text" placeholder="New password" name="new-password" id="new-password">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group mb-0 float-right mt-2"><button class="btn btn-primary btn-sm px-3 br-20" type="submit">Save Settings</button></div>
+                </form>
+            </div>
+        </div>
+        <div class="row w-100 mx-0 mb-0 p-0">
+            <div class="col-12">
+                <h6 class="font-weight-bold mb-5">
+                    <span class="fa fa-info-circle text-success pr-2"></span>
+                    Company Details
+                </h6>
+            </div>
+            <div class="col-12">
+                <form>
+                    <div class="form-row">
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="company-name" class="text-muted"><strong>Company Name</strong></label>
+                                <input type="text" class="nt-form-control br-20" placeholder="Company Name" name="company-name" id="company-name">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="address" class="text-muted"><strong>Address</strong></label>
+                                <input class="nt-form-control br-20 " type="text" placeholder="112, Rice Street" name="address" id="address">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="phone" class="text-muted"><strong>Phone</strong></label>
+                                <input class="nt-form-control br-20 " type="text" placeholder="Accra" name="phone" id="phone">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="company-email" class="text-muted"><strong>Company Email</strong></label>
+                                <input class="nt-form-control br-20 " type="text" placeholder="Company Email " name="company-email" id="company-email">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group mt-2 mb-3 mb-md-0 float-right"><button class="btn btn-primary btn-sm px-3 br-20" type="submit">Save&nbsp;Settings</button></div>
+                </form>
             </div>
         </div>
     </div>
