--- a/lib/src/dashboard_component/setting_component/setting_component.html
+++ b/lib/src/dashboard_component/setting_component/setting_component.html
@@ -147,7 +147,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-12 col-md-4 mb-4">
+        <!--<div class="col-sm-12 col-md-4 mb-4">
             <div class="card br-20 shadow">
                 <div class="card-body py-3 px-4">
                     <div class="nt-circle bg-info">
@@ -182,6 +182,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 </div>
