--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/icon.css">
 
   </head>
-  <body id="body">
+  <body>
     <postit-app>
       <img src="img/load.gif" alt="Loading....." class="loading-gif">
     </postit-app>
