--- a/lib/src/dashboard_component/post_engagement_component/post_engagement_component.html
+++ b/lib/src/dashboard_component/post_engagement_component/post_engagement_component.html
@@ -143,7 +143,7 @@
                     <img src="img/display_chat.png" alt="click-to-display-chat-icon" class="img-fluid">
                 </div>
             </div>
-            <div class="row w-100 m-0 px-0 py-2 chat-box" *ngIf="chats.isNotEmpty" id="chat-box">
+            <div class="row w-100 m-0 px-0 py-2 chat-box" *ngIf="chats.isNotEmpty" id="chat-box-mob">
                 <div class="text-center w-100" style="height: max-content;">
                     <span class="px-4 py-1 small see-older-messages">See older comments</span>
                 </div>
